--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,7 @@
 PORT=3000
 MONGO_CONN='mongodb+srv://sahilkumrawat2622636:UfxYNn4dhkU0xMHD@cluster0.jkphk.mongodb.net/auth-db?retryWrites=true&w=majority&appName=Cluster0'
 
-JWT_SECRET='secret-123'
+JWT_SECRET='secret-123' 
+FRONTEND_URL = 'http://localhost:5173'
 
 # UfxYNn4dhkU0xMHD
